--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.22",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "react-spinners": "^0.9.0"
