--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -41,6 +42,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.12.5"
+    "@babel/plugin-transform-react-jsx": "^7.12.5",
+    "@emotion/babel-plugin": "^11.0.0",
+    "@emotion/core": "^11.0.0"
   }
 }
